Внесла правки Проект Сложно сосредоточиться

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <h3 class="card__title title-decor">
+        <h3 class="section__subtitle title-decor">
           5 простых (на самом деле не очень) советов
         </h3>
         <div class="section__content">
-          <article class="card card_advice">
+          <article class="card">
             <h4 class="card__subtitle">Представьте небо и облака</h4>
             <p class="card__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
@@ -158,7 +158,7 @@
               проблемах из будущего.
             </p>
           </article>
-          <article class="card card_advice">
+          <article class="card">
             <h4 class="card__subtitle">Включите музыку</h4>
             <p class="card__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -167,7 +167,7 @@
               попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
           </article>
-          <article class="card card_advice">
+          <article class="card">
             <h4 class="card__subtitle">Прогуляйтесь</h4>
             <p class="card__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -183,7 +183,7 @@
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
-          <article class="card card_advice">
+          <article class="card">
             <h4 class="card__subtitle">Хорошо ешьте</h4>
             <p class="card__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -192,7 +192,7 @@
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
-          <article class="card card_advice">
+          <article class="card">
             <h4 class="card__subtitle">Читайте</h4>
             <p class="card__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -203,35 +203,35 @@
           </article>
         </div>
       </section>
-      <section class="section section_gallery">
-        <h2 class="card__title title-decor">А можно в картинках?</h2>
+      <section class="section gallery section_gallery">
+        <h2 class="section__subtitle title-decor">А можно в картинках?</h2>
         <div class="section__content">
           <img
-            class="gallery__img gallery__img_sunset"
+            class="gallery__img"
             src="./images/sunset.png"
             alt="Закат в горах"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img_ice"
+            class="gallery__img"
             src="./images/ice-cream.png"
             alt="Мультяшные шарики мороженого с взбитым кремом"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img_tape"
+            class="gallery__img"
             src="./images/tape.png"
             alt="Касеты с медиаплеером"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img_books"
+            class="gallery__img"
             src="./images/books.png"
             alt="Книги"
             loading="lazy"
           />
           <img
-            class="gallery__img gallery__img_street"
+            class="gallery__img"
             src="./images/street.png"
             alt="Улица в розовых тонах"
             loading="lazy"
